# TensorTracker

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  config.json  global.h  main.cpp
include/: camera_capture.h  camera_thread.h  frame_median.h  frame_processing.h  frame_reader.h  frame_source.h  service.h  tracker_global.h
src/: camera_capture.cpp  camera_thread.cpp  frame_median.cpp  frame_processing.cpp  frame_reader.cpp  frame_source.cpp  service.cpp
